[project]
name = "memory-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.5.9",
    "google-genai>=2.7.0",
    "openai>=2.38.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "tqdm>=4.67.3",
]
